fix(frontend): exiting lightbox jumps to top of the page

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -15,8 +15,6 @@ html {
 
 html,
 body {
-  height: 100%;
-  width: 100%;
   padding: 0;
   margin: 0;
   font-family: system-ui, "Noto Sans JP", sans-serif;
